# skydecoder

./: .gitignore  GEMINI.md  README.md  environment.yml  pyproject.toml
doc/: README.md
src/skydecoder/: __init__.py  main.py
